k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: wanderlust
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: kmvishal/wanderlust-backend:v1.8
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: wanderlust
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
