k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: wanderlust
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: kmvishal/wanderlust-frontend:v2.1
        ports:
        - containerPort: 5173
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: wanderlust
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
