k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wanderlust-ingress
  namespace: wanderlust
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1  # Ensures ACME challenges are properly routed
spec:
  ingressClassName: nginx
  rules:
    - host: wonderlust.lovestoblog.com
      http:
        paths:
          - path: "/.well-known/acme-challenge/(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 5173
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5173
  tls:
    - hosts:
        - wonderlust.lovestoblog.com
      secretName: wanderlust-tls
